base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-list-svc
spec:
  type: ClusterIP
  selector:
    app: todo-list
  ports:
    - name: todo-app
      port: 2345
      protocol: TCP
      targetPort: 8080
    - name: todo-backend
      port: 4040
      protocol: TCP
      targetPort: 4040
